# stellar-cookiecutter

./: AGENTS.md  CLAUDE.md  README.md  cookiecutter.json  justfile  pyproject.toml
.github/: CODEOWNERS
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: AGENTS.md  CLAUDE.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: test.yml
{{cookiecutter.package_name}}/infrastructure/: __init__.py
{{cookiecutter.package_name}}/src/{{cookiecutter.project_slug}}/orchestration/: CLAUDE.md  __init__.py
{{cookiecutter.package_name}}/src/{{cookiecutter.project_slug}}/pipelines/: CLAUDE.md  __init__.py
{{cookiecutter.package_name}}/src/{{cookiecutter.project_slug}}/transformation/: CLAUDE.md  __init__.py
{{cookiecutter.package_name}}/src/{{cookiecutter.project_slug}}/visualisation/: CLAUDE.md  __init__.py
