[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stellar-cookiecutter"
version = "0.2.0"
description = "Cookiecutter template for a Python package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Eric Thanenthiran", email = "eric@stellarglyph.io" }
]
keywords = ["cookiecutter", "template", "package"]


dependencies = [
    "cookiecutter>=2.6.0",
    "typer>=0.16.0",
    "alabaster>=1.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "pytest-cookies",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"
]

[project.urls]
homepage = ""

[tool.ruff]
exclude = [
    "*cookiecutter.package_name*"
    ]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "rust-just>=1.42.4",
]
