[project]
name = "stellar-cookiecutter"
version = "0.2.0"
description = "Cookiecutter template for a Python package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Eric Thanenthiran", email = "eric@stellarglyph.io" }
]
keywords = ["cookiecutter", "template", "package"]


dependencies = [
    "cookiecutter>=2.6.0",
    "typer>=0.16.0",
    "alabaster>=1.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "pytest-cookies",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
homepage = ""

[tool.ruff]
exclude = [
    "*cookiecutter.package_name*"
    ]
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (needed for Typer)
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "rust-just>=1.42.4",
]
